[tool.poetry]
name = "vipershark"
version = "0.1.0"
description = "sandbox for python and julia"
authors = ["imry <imry.rosenbaum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
julia = "^0.6.0"
numpy = "^1.23.5"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
